resized logo to prevent overlap on about page

--- a/screen.css
+++ b/screen.css
@@ -81,6 +81,7 @@ form{
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 200px;
 }
 
 .details{
